tests/paczka1/fuzzy1/50859862.err
Error in line 4: M1deH S526 36,5
Error in line 5: CpOe4e S526 8,4
Error in line 14: CpOe4e S526 14,4
Error in line 25: rFF8R A565 12,8
Error in line 34: vVS A541 41,"
Error in line 36: vVS A541 33,5
